align header correctly using flexbox

--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 
+/* i added a css reset below */
 * {
   padding: 0;
   margin: 0;
@@ -39,7 +40,7 @@ input {
 
 .header li {
   list-style-type: none;
-  padding: 5px;
+  padding: 16px 12px;
 }
 
 .header a {
@@ -50,4 +51,10 @@ input {
 .left-links,
 .right-links {
   display: flex;
+}
+
+.content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
